--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma": "prisma",
+    "db:migrate": "prisma migrate dev",
+    "db:seed": "node scripts/seed-admin.js"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.1",
+    "bcryptjs": "^3.0.3",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
+    "prisma": "^6.19.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
