--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint",
     "prisma": "prisma",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "node scripts/seed-admin.js"
+    "db:seed": "node scripts/seed-admin.js",
+    "db:seed:test": "node scripts/seed-test-data.js",
+    "db:seed:reset": "node scripts/reset-test-data.js"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
